--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "555calculator",
   "main": "index.html",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
