--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ultimate 555 Calculator",
+  "name": "ultimate555calculator",
   "version": "1.0.0",
   "description": "555calculator",
   "main": "index.html",
